change topbar menu items links icons

--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -2,7 +2,7 @@
     <button
         data-active="false"
         id="topbar-menu-button"
-        class="p-2.5 rounded-md text-light-gray-primary dark:text-dark-gray-primary hover:bg-[#cde7ff] dark:hover:bg-[#fff1] hover:text-light-texto-primary dark:hover:text-dark-texto-primary transition-colors data-[active=true]:bg-[#cde7ff] dark:data-[active=true]:bg-[#fff1] data-[active=true]:text-light-texto-primary dark:data-[active=true]:text-dark-texto-primary"
+        class="p-2.5 rounded-md text-light-gray-primary dark:text-dark-gray-primary hover:bg-[#cde7ff] dark:hover:bg-[#fff2] hover:text-light-texto-primary dark:hover:text-dark-texto-primary transition-colors data-[active=true]:bg-[#cde7ff] dark:data-[active=true]:bg-[#fff2] data-[active=true]:text-light-texto-primary dark:data-[active=true]:text-dark-texto-primary"
     >
         <svg class="svgIcon" xmlns="http://www.w3.org/2000/svg" 
             width="1.5em" height="1.5em" viewBox="0 0 24 24">
@@ -30,70 +30,34 @@
                 class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#ffe8f5] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-[#00fa9a] transition-colors"
                 href="#jobs"
             >
-                <svg
-                    class="stroke-[#43a1f1] dark:stroke-[#00fa9a]"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#43a1f1"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    ><rect x="2" y="7" width="20" height="14" rx="2" ry="2"
-                    ></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"
-                    ></path></svg
-                >
-                Experiencia</a
-            >
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.3rem" height="1.3rem" viewBox="0 0 512 512">
+	                <path fill="#00fa9a" d="M176 56v40h160V56c0-4.4-3.6-8-8-8H184c-4.4 0-8 3.6-8 8m-48 40V56c0-30.9 25.1-56 56-56h144c30.9 0 56 25.1 56 56v424H128V128zm-64 0h32v384H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64m384 384h-32V96h32c35.3 0 64 28.7 64 64v256c0 35.3-28.7 64-64 64" />
+                </svg>
+                Experiencia
+            </a>
         </li>
         <li>
-            <a
-                class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#ffe8f5] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-[#00fa9a] transition-colors"
+            <a class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#ffe8f5] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-[#00fa9a] transition-colors"
                 href="#projects"
             >
-                <svg
-                    class="stroke-[#43a1f1] dark:stroke-[#00fa9a]"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#43a1f1"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    ><path
-                        d="m15 12-8.5 8.5c-.83.83-2.17.83-3 0 0 0 0 0 0 0a2.12 2.12 0 0 1 0-3L12 9"
-                    ></path><path d="M17.64 15 22 10.64"></path><path
-                        d="m20.91 11.7-1.25-1.25c-.6-.6-.93-1.4-.93-2.25v-.86L16.01 4.6a5.56 5.56 0 0 0-3.94-1.64H9l.92.82A6.18 6.18 0 0 1 12 8.4v1.56l2 2h2.47l2.26 1.91"
-                    ></path></svg
-                >
-                Proyectos</a
-            >
+            <svg xmlns="http://www.w3.org/2000/svg" width="1.3rem" height="1.3rem" viewBox="0 0 16 16">
+	            <path fill="#00fa9a" d="M3.5 1A2.5 2.5 0 0 0 1 3.5v7A2.5 2.5 0 0 0 3.5 13h1.992a2.52 2.52 0 0 1 .242-.28l.72-.72H3.5A1.5 1.5 0 0 1 2 10.5V5h10v.026a4.538 4.538 0 0 1 1 .004V3.5A2.5 2.5 0 0 0 10.5 1zm5.431 5.724l-.577-.578a.5.5 0 1 0-.708.708l.745.744c.144-.306.324-.6.54-.874m-2.577.13a.5.5 0 1 0-.708-.708l-2 2a.5.5 0 0 0 0 .708l2 2a.5.5 0 0 0 .708-.708L4.707 8.5zm6.538-.83c.366.042.471.48.21.742l-.975.975a1.507 1.507 0 1 0 2.132 2.132l.975-.975c.261-.261.7-.156.742.21a3.518 3.518 0 0 1-4.676 3.723l-2.726 2.727a1.507 1.507 0 1 1-2.132-2.132L9.168 10.7a3.518 3.518 0 0 1 3.724-4.676" />
+            </svg>
+                Proyectos
+            </a>
         </li>
         <li>
             <a
                 class="menu-item flex items-center py-3 px-4 text-sm hover:bg-[#ffe8f5] dark:hover:bg-[#fff1] gap-3 hover:text-light-texto-primary hover:dark:text-[#00fa9a] transition-colors"
                 href="#education"
             >
-                <svg
-                    class="stroke-[#43a1f1] dark:stroke-[#00fa9a]"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#43a1f1"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    ><path d="M22 10v6M2 10l10-5 10 5-10 5z"></path><path
-                        d="M6 12v5c3 3 9 3 12 0v-5"></path></svg
-                >
-                Educación</a
-            >
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.3rem" height="1.3rem" viewBox="0 0 24 24">
+	                <path fill="#00fa9a" fill-rule="evenodd" d="M2 12V8c0-2.828 0-4.243.879-5.121C3.757 2 5.172 2 8 2h8c2.828 0 4.243 0 5.121.879C22 3.757 22 5.172 22 8v4c0 2.828 0 4.243-.879 5.121c-.476.477-1.11.695-2.04.795a2.94 2.94 0 0 0-.195-.234a11.002 11.002 0 0 0-.406-.414l-1.493-1.472l-.551-.558a4.501 4.501 0 0 0-8.872 0l-.55.558l-1.494 1.472c-.143.141-.29.286-.406.414c-.05.055-.12.134-.194.234c-.931-.1-1.565-.318-2.041-.795C2 16.243 2 14.828 2 12m7-6.75a.75.75 0 0 0 0 1.5h6a.75.75 0 0 0 0-1.5zM6.25 9.5A.75.75 0 0 1 7 8.75h10a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75" clip-rule="evenodd" />
+	                <path fill="#00fa9a" d="M15 16a3 3 0 1 1-6 0a3 3 0 0 1 6 0" />
+	                <path fill="#00fa9a" d="M9.001 15.917L9 16a3 3 0 1 0 .001-.083M7.676 17.25l-1.08 1.065c-.325.32-.487.48-.543.614a.643.643 0 0 0 .26.813c.122.071.342.093.783.138c.248.025.373.037.477.075a.838.838 0 0 1 .5.494c.039.103.052.225.077.47c.045.435.068.652.14.773a.662.662 0 0 0 .824.256c.137-.056.3-.215.623-.535l1.08-1.07a4.509 4.509 0 0 1-3.141-3.094m5.507 3.094l1.08 1.07c.324.32.486.48.623.535c.313.126.66.018.824-.256c.072-.12.095-.338.14-.772c.025-.246.038-.368.077-.47a.839.839 0 0 1 .5-.495c.105-.038.229-.05.477-.075c.44-.045.661-.067.783-.138a.643.643 0 0 0 .26-.812c-.056-.136-.218-.296-.542-.615l-1.08-1.066a4.509 4.509 0 0 1-3.142 3.094" />
+                </svg>
+                Formación
+            </a>
         </li>
         <span
             class="flex w-full border-b-[1px] border-[#0001] dark:border-[#fff1]"
@@ -104,24 +68,11 @@
                 href="https://www.linkedin.com/in/dami-gonzalez/"
                 target="_blank"
             >
-                <svg
-                    class="stroke-[#43a1f1] dark:stroke-[#00fa9a]"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#43a1f1"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    ><path
-                        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
-                    ></path><rect x="2" y="9" width="4" height="12"
-                    ></rect><circle cx="4" cy="4" r="2"></circle></svg
-                >
-                LinkedIn</a
-            >
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.3rem" height="1.3rem" viewBox="0 0 1536 1536">
+	                <path fill="#00fa9a" d="M237 1286h231V592H237zm246-908q-1-52-36-86t-93-34t-94.5 34t-36.5 86q0 51 35.5 85.5T351 498h1q59 0 95-34.5t36-85.5m585 908h231V888q0-154-73-233t-193-79q-136 0-209 117h2V592H595q3 66 0 694h231V898q0-38 7-56q15-35 45-59.5t74-24.5q116 0 116 157zm468-998v960q0 119-84.5 203.5T1248 1536H288q-119 0-203.5-84.5T0 1248V288Q0 169 84.5 84.5T288 0h960q119 0 203.5 84.5T1536 288" />
+                </svg>
+                LinkedIn
+            </a>
         </li>
         <li>
             <a
@@ -129,23 +80,11 @@
                 href="https://github.com/nangonz"
                 target="_blank"
             >
-                <svg
-                    class="stroke-[#43a1f1] dark:stroke-[#00fa9a]"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="#43a1f1"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    ><path
-                        d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
-                    ></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg
-                >
-                Github</a
-            >
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.6rem" height="1.6rem" viewBox="-2 -2 24 24">
+                    <path fill="#00fa9a" d="M18.88 1.099C18.147.366 17.265 0 16.233 0H3.746C2.714 0 1.832.366 1.099 1.099C.366 1.832 0 2.714 0 3.746v12.487c0 1.032.366 1.914 1.099 2.647c.733.733 1.615 1.099 2.647 1.099H6.66c.19 0 .333-.007.429-.02a.504.504 0 0 0 .286-.169c.095-.1.143-.245.143-.435l-.007-.885c-.004-.564-.006-1.01-.006-1.34l-.3.052c-.19.035-.43.05-.721.046a5.555 5.555 0 0 1-.904-.091a2.026 2.026 0 0 1-.872-.39a1.651 1.651 0 0 1-.572-.8l-.13-.3a3.25 3.25 0 0 0-.41-.663c-.186-.243-.375-.407-.566-.494l-.09-.065a.956.956 0 0 1-.17-.156a.723.723 0 0 1-.117-.182c-.026-.061-.004-.111.065-.15c.07-.04.195-.059.378-.059l.26.04c.173.034.388.138.643.311a2.1 2.1 0 0 1 .631.677c.2.355.44.626.722.813c.282.186.566.28.852.28c.286 0 .533-.022.742-.065a2.59 2.59 0 0 0 .585-.196c.078-.58.29-1.028.637-1.34a8.907 8.907 0 0 1-1.333-.234a5.314 5.314 0 0 1-1.223-.507a3.5 3.5 0 0 1-1.047-.872c-.277-.347-.505-.802-.683-1.365c-.177-.564-.266-1.215-.266-1.952c0-1.049.342-1.942 1.027-2.68c-.32-.788-.29-1.673.091-2.652c.252-.079.625-.02 1.119.175c.494.195.856.362 1.086.5c.23.14.414.257.553.352a9.233 9.233 0 0 1 2.497-.338c.859 0 1.691.113 2.498.338l.494-.312a6.997 6.997 0 0 1 1.197-.572c.46-.174.81-.221 1.054-.143c.39.98.424 1.864.103 2.653c.685.737 1.028 1.63 1.028 2.68c0 .737-.089 1.39-.267 1.957c-.177.568-.407 1.023-.689 1.366a3.65 3.65 0 0 1-1.053.865c-.42.234-.828.403-1.223.507a8.9 8.9 0 0 1-1.333.235c.45.39.676 1.005.676 1.846v3.11c0 .147.021.266.065.357a.36.36 0 0 0 .208.189c.096.034.18.056.254.064c.074.01.18.013.318.013h2.914c1.032 0 1.914-.366 2.647-1.099c.732-.732 1.099-1.615 1.099-2.647V3.746c0-1.032-.367-1.914-1.1-2.647z" />
+                </svg>
+                Github
+            </a>
         </li>
     </ul>
 </div>
