topbar menu items icons color change for dark and light mode

--- a/src/sections/homeSection.astro
+++ b/src/sections/homeSection.astro
@@ -7,9 +7,9 @@ import logoNan from "/dglogoBlueGreen.svg"
     id="home"
 >
     <div class="flex flex-col gap-2 text-center items-center justify-center">
-        <img class="w-[220px] h-[220px] my-2 animate-wiggle drop-shadow-[4px_8px_4px_rgba(0,0,0,0.25)] dark:drop-shadow-[2px_50px_10rem_#79ffcb]" src={logoNan}>
+        <img class="select-none w-[220px] h-[220px] my-2 animate-wiggle drop-shadow-[4px_8px_4px_rgba(0,0,0,0.25)] dark:drop-shadow-[2px_50px_10rem_#79ffcb]" src={logoNan}>
         <h1
-            class="welcomeGreeting drop-shadow-[1px_2px_1px_#00fa9a] dark:drop-shadow-[1px_2px_4px_rgba(19,154,255,0.75)] text-[1.5rem] sm:text-[1.8rem] text-[#272727] py-6 px-6 w-fit font-bold rounded-xl dark:text-[#00fa9a]"
+            class="select-none welcomeGreeting drop-shadow-[1px_2px_1px_#00fa9a] dark:drop-shadow-[1px_2px_4px_rgba(19,154,255,0.75)] text-[1.5rem] sm:text-[1.8rem] text-[#272727] py-6 px-6 w-fit font-bold rounded-xl dark:text-[#00fa9a]"
         >
             Bienvenido!<span class="hi">👋</span> Soy Damian Gonzalez
         </h1>
