change about section image

--- a/src/sections/aboutSection.astro
+++ b/src/sections/aboutSection.astro
@@ -1,32 +1,28 @@
 <section
-    class="flex flex-col sm:flex-row pt-16 pb-20 items-center gap-10"
+    class="flex flex-col sm:flex-row pt-16 pb-20 items-center gap-16"
 >
     <article class="flex flex-col gap-8">
         <h1
-            class="font-extrabold text-light-texto-primary dark:text-dark-texto-primary text-3xl sm:text-4xl"
+            class="font-extrabold text-light-texto-primary dark:text-[#00fa9a] text-3xl sm:text-4xl"
         >
-            Sobre mi<span class="text-light-texto-secondary">.</span>
+            Sobre mi
         </h1>
         <div
-            class="flex flex-col gap-3 text-[0.91rem] text-light-texto-secondary dark:text-dark-texto-secondary"
+            class="flex flex-col gap-3 text-[1rem] text-light-texto-secondary dark:text-dark-texto-secondary"
         >
-            <p>
-                Durante mi formación he sido parte de equipos de trabajo multiculturales 
-                donde pude desarrollar habilidades de comunicación y de trabajo en equipo 
-                participando en el desarrollo frontend y backend de aplicaciones web 
-                implementando una metodología de trabajo ágil. Esto me ha permitido aumentar 
-                mi orientación a resultados y capacidad de resolucion de problemas.
-            </p>
-            <p>
-                Mi objetivo es desarrollar mi carrera profesional como programador web, 
-                aplicar todo lo aprendido hasta ahora y seguir creciendo tanto personal 
-                como profesionalmente para lograr los mejores resultados posibles.
+            <p class="about-paragraph text-pretty leading-7">
+                Desarrollador Web full stack Javascript con preferencia por el front end. 
+                Estudié además diseño UX UI en el programa “codo a codo” del Ministerio de Educación de CABA. 
+                Durante mi formación he sido parte de equipos de trabajo multiculturales donde pude desarrollar 
+                habilidades de comunicación y de trabajo en equipo participando en el desarrollo front end y 
+                back end de aplicaciones web implementando una metodología de trabajo ágil. Actualmente me desempeño
+                como freelancer.
             </p>
         </div>
     </article>
     <img
-        class="rounded-md h-[200px] w-[200px] sm:w-[300px] sm:h-[300px] mt-14"
-        src="/profileOpRed.png"
+        class="rounded-xl h-[200px] w-[200px] sm:w-[300px] sm:h-[300px] mt-14"
+        src="/blueCod.webp"
         alt="Damian Gonzalez - Desarrollador Frontend"
         loading="lazy"
     />
