--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Arizonia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Averia+Gruesa+Libre&family=Madimi+One&family=Ojuju:wght@200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Averia+Gruesa+Libre&family=Madimi+One&display=swap');
 
 :root {
     --background: #fafbfc;
@@ -94,4 +96,10 @@ body.dark {
   font-family: "Corinthia", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;
   font-weight: 700;
   font-style: bold;
+}
+
+.about-paragraph {
+  font-family: "ABeeZee", sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto;
+  font-weight: 400;
+  font-style: normal;
 }
