replace about section image

--- a/src/sections/aboutSection.astro
+++ b/src/sections/aboutSection.astro
@@ -21,8 +21,8 @@
         </div>
     </article>
     <img
-        class="rounded-xl h-[200px] w-[300px] sm:w-[300px] sm:h-[300px] mt-14"
-        src="/development.webp"
+        class="rounded-xl h-[300px] w-[300px] sm:w-[300px] sm:h-[300px] mt-14"
+        src="/webmacblue.png"
         alt="Damian Gonzalez - Desarrollador Frontend"
         loading="lazy"
     />
