--- a/src/sections/jobsSection.astro
+++ b/src/sections/jobsSection.astro
@@ -5,7 +5,7 @@ import jobs from "../data/jobs.json";
 
 <section class="flex flex-col pt-16 pb-20 gap-16" id="jobs">
     <h1
-        class="font-extrabold text-light-texto-primary dark:text-dark-texto-primary text-3xl sm:text-4xl"
+        class="font-extrabold text-light-texto-primary dark:text-[#00fa9a] text-3xl sm:text-4xl"
     >
         Experiencia<span class="text-light-texto-secondary">.</span>
     </h1>
