--- a/src/sections/aboutSection.astro
+++ b/src/sections/aboutSection.astro
@@ -8,7 +8,7 @@
             Sobre mi
         </h1>
         <div
-            class="flex flex-col gap-3 text-[1rem] text-light-texto-secondary dark:text-dark-texto-secondary"
+            class="flex flex-col gap-3 text-[1rem] text-light-texto-secondary dark:text-[#ddd]"
         >
             <p class="about-paragraph text-pretty leading-7">
                 Desarrollador Web full stack Javascript con preferencia por el front end. 
