change job section cards title and accordion button colors

--- a/src/sections/jobsSection.astro
+++ b/src/sections/jobsSection.astro
@@ -12,7 +12,7 @@ import jobs from "../data/jobs.json";
     <div class="relative flex flex-col gap-20">
         {jobs.map((job) => <JobCard {...job} />)}
         <div
-            class="absolute left-0 border-l-[1px] h-full z-[-1] border-dashed border-[#00fa9a] dark:border-mainPink sm:left-[50%]"
+            class="absolute left-0 border-l-[1px] h-full z-[-1] border-dashed border-[#00fa9a] dark:border-mainBlue sm:left-[50%]"
         >
         </div>
     </div>
