--- a/src/components/JobCard.astro
+++ b/src/components/JobCard.astro
@@ -43,7 +43,7 @@ const {
     class="job-card group relative flex flex-col pl-6 gap-4 sm:w-[50%] sm:even:translate-x-full pr-0 sm:odd:pl-0 odd:pr-6"
 >
     <span
-        class="circle gradient absolute top-0 left-[-10px] h-[20px] w-[20px] rounded-full z-[1]"
+        class="circle bg-mainBlue absolute top-0 left-[-10px] h-[20px] w-[20px] rounded-full z-[1]"
     ></span>
     <div
         class="job-picture border-4 top-0 p-2 flex flex-col justify-center items-center gap-4 sm:absolute h-[120px] w-[120px] object-contain rounded-2xl bg-white"
@@ -58,12 +58,12 @@ const {
     <div class="flex flex-col justify-center h-auto">
         <div class="flex flex-col mb-4">
             <h1
-                class="text-light-texto-primary dark:text-dark-texto-primary font-extrabold text-lg"
+                class="text-light-texto-primary dark:text-[#00fa9a] font-extrabold text-lg"
             >
                 {jobTitle}
             </h1>
             <span
-                class="text-light-gray-primary dark:text-dark-gray-primary text-sm font-medium"
+                class="text-light-gray-primary dark:text-mainPink text-sm font-medium"
             >
                 {jobCompany}
             </span>
@@ -84,7 +84,7 @@ const {
         >
             <div class="flex flex-col gap-2 mt-4">
                 <h2
-                    class="text-light-texto-primary dark:text-dark-texto-primary font-bold text-[0.91rem]"
+                    class="text-light-texto-primary dark:text-mainPink font-bold text-[0.91rem]"
                 >
                     Actividades
                 </h2>
@@ -96,7 +96,7 @@ const {
             </div>
             <div class="flex flex-col gap-2 mb-1">
                 <h2
-                    class="text-light-texto-primary dark:text-dark-texto-primary font-bold text-[0.91rem]"
+                    class="text-light-texto-primary dark:text-mainPink font-bold text-[0.91rem]"
                 >
                     Tecnologías
                 </h2>
