--- a/src/components/AccordionButton.astro
+++ b/src/components/AccordionButton.astro
@@ -3,7 +3,7 @@ const { dataTarget } = Astro.props;
 ---
 
 <button
-    class="accordion-button group mt-4 w-fit justify-center p-1 pr-3 flex items-center gap-1 sm:gap-2 font-semibold text-sm text-light-texto-secondary dark:text-[#272727] bg-[#0001] dark:bg-mainPink transition-colors rounded-lg hover:bg-light-texto-primary dark:hover:bg-dark-texto-primary hover:text-light-fondo-primary dark:hover:text-dark-fondo-primary"
+    class="accordion-button group mt-4 w-fit justify-center p-1 pr-3 flex items-center gap-1 sm:gap-2 font-semibold text-sm text-light-texto-secondary dark:text-[#fff] bg-[#0001] dark:bg-mainBlue transition-colors rounded-lg hover:bg-light-texto-primary hover:text-light-fondo-primary dark:hover:text-dark-fondo-primary"
     data-target={`accordion-${dataTarget}`}
 >
     <svg
