change education and projects section title color

--- a/src/sections/ProjectsSection.astro
+++ b/src/sections/ProjectsSection.astro
@@ -10,9 +10,9 @@ import projects from "../data/projects.json";
     id="projects"
 >
     <h1
-        class="font-extrabold text-light-texto-primary dark:text-dark-texto-primary text-3xl sm:text-4xl"
+        class="font-extrabold text-light-texto-primary dark:text-[#00fa9a] text-3xl sm:text-4xl"
     >
-        Proyectos<span class="text-light-texto-secondary">.</span>
+        Proyectos
     </h1>
     <div
         class="grid grid-cols-1 gap-x-7 gap-y-12 sm:grid-cols-2 md:gap-x-12 md:gap-y-12 sm:gap-x-6 sm:gap-y-12"
