--- a/src/sections/EducationSection.astro
+++ b/src/sections/EducationSection.astro
@@ -7,7 +7,7 @@ import educationDegrees from "../data/education.json";
     <h1
         class="font-extrabold text-light-texto-primary dark:text-[#00fa9a] text-3xl sm:text-4xl"
     >
-        Educación
+        Educación y Certificados
     </h1>
     <div class="grid grid-cols-1 gap-x-8 gap-y-12 md:grid-cols-2">
         {educationDegrees.map((education) => <EducationCard {...education} />)}
