style changes to education section

--- a/src/components/EducationCard.astro
+++ b/src/components/EducationCard.astro
@@ -12,10 +12,10 @@ const {
 
 <article class="flex gap-4">
     <div
-        class="flex justify-center items-center border-2 bg-white object-contain rounded-2xl overflow-hidden aspect-square w-[90px] h-[90px] min-w-[90px] sm:w-[110px] sm:h-[110px] sm:min-w-[110px]"
+        class="flex justify-center items-center border-2 border-[#f9f2eb] bg-white object-contain rounded-2xl overflow-hidden aspect-square w-[90px] h-[90px] min-w-[90px] sm:w-[110px] sm:h-[110px] sm:min-w-[110px]"
     >
         <img
-            class="w-full h-auto border-stone-900"
+            class="w-full h-auto border-1 border-stone-900"
             src={`/education/${educationPicture}`}
             alt={`Picture of ${educationTitle} degree`}
             loading="lazy"
@@ -40,10 +40,10 @@ const {
                         <h1>
                             {educationTitle}
                             <svg
-                                class="inline text-light-gray-primary dark:text-dark-gray-primary"
+                                class="inline text-[#ff65c4]"
                                 xmlns="http://www.w3.org/2000/svg"
-                                width="14"
-                                height="14"
+                                width="18"
+                                height="18"
                                 viewBox="0 0 24 24"
                                 fill="none"
                                 stroke="currentColor"
