change styles to contact section

--- a/src/contactCards/GithubCard.astro
+++ b/src/contactCards/GithubCard.astro
@@ -4,7 +4,7 @@
         width="56"
         height="56"
         viewBox="0 0 24 24"
-        fill="#555"
+        fill="#43a1f1"
         ><path
             fill-rule="evenodd"
             clip-rule="evenodd"
