--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -26,15 +26,14 @@ import YoutubeCard from "../contactCards/YoutubeCard.astro";
 </style>
 <section class="flex flex-col pt-16 pb-20 gap-16" id="contact">
     <h1
-        class="font-extrabold text-light-texto-primary dark:text-dark-texto-primary text-3xl sm:text-4xl"
+        class="font-extrabold text-light-texto-primary dark:text-[#00fa9a] text-3xl sm:text-4xl"
     >
         Contacto<span class="text-light-texto-secondary">.</span>
     </h1>
     <ul class="contact-links grid gap-x-8 gap-y-12">
         <EmailCard />
         <LinkedinCard />
-        <GithubCard />
-        <YoutubeCard />
         <TwitterCard /> 
+        <GithubCard />
     </ul>
 </section>
