replace about section image

--- a/src/sections/aboutSection.astro
+++ b/src/sections/aboutSection.astro
@@ -1,5 +1,5 @@
 <section
-    class="flex flex-col sm:flex-row pt-16 pb-20 items-center gap-16"
+    class="flex flex-col sm:flex-row pt-16 pb-20 items-center gap-6"
 >
     <article class="flex flex-col gap-8">
         <h1
@@ -21,8 +21,8 @@
         </div>
     </article>
     <img
-        class="rounded-xl h-[300px] w-[300px] sm:w-[300px] sm:h-[300px] mt-14"
-        src="/webmacblue.png"
+        class="rounded-xl h-[400px] w-[400px] sm:w-[350px] sm:h-[350px] mt-14"
+        src="/coding.png"
         alt="Damian Gonzalez - Desarrollador Frontend"
         loading="lazy"
     />
