--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -3,7 +3,7 @@ import EmailCard from "../contactCards/EmailCard.astro";
 import GithubCard from "../contactCards/GithubCard.astro";
 import LinkedinCard from "../contactCards/LinkedinCard.astro";
 import TwitterCard from "../contactCards/TwitterCard.astro";
-import YoutubeCard from "../contactCards/YoutubeCard.astro";
+// import YoutubeCard from "../contactCards/YoutubeCard.astro";
 ---
 
 <style>
