--- a/src/pages/min-portfolio/index.astro
+++ b/src/pages/min-portfolio/index.astro
@@ -11,10 +11,10 @@ const { name } = basics
 
 <PrintableLayout language="es" title=`CV minimalista - ${name}`>
 	<main>
+		<h1>Minimalist portfolio default locale</h1>
 		<Hero data={basics} />
+		<KeyboardManager />
 	</main>
-	
-	<KeyboardManager />
 </PrintableLayout>
 
 <style>
