--- a/src/pages/min-portfolio/en/index.astro
+++ b/src/pages/min-portfolio/en/index.astro
@@ -5,7 +5,7 @@ import PrintableLayout from '@/layouts/printableLayout.astro'
 import Hero from '@/components/printablecv-components/Hero.astro'
 import KeyboardManager from '@/components/printablecv-components/KeyboardManager.astro'
 
-import { basics } from "@cv"
+import { basics } from "@cv-eng";
 const { name } = basics
 ---
 
