--- a/src/pages/min-portfolio/index.astro
+++ b/src/pages/min-portfolio/index.astro
@@ -4,16 +4,18 @@ import PrintableLayout from '@/layouts/printableLayout.astro'
 
 import Hero from '@/components/printablecv-components/Hero.astro'
 import About from '@/components/printablecv-components/About.astro';
+import Education from '@/components/printablecv-components/Education.astro';
 import KeyboardManager from '@/components/printablecv-components/KeyboardManager.astro'
 
-import { basics } from "@cv"
+import { basics, education } from "@cv"
 const { name } = basics
 ---
 
 <PrintableLayout language="es" title=`CV minimalista - ${name}`>
 	<main>
 		<Hero data={basics} />
-		<About data={basics.summary} sectionTitle="About me" />
+		<About data={basics.summary} sectionTitle="Sobre mí" />
+		<Education data={education} sectionTitle="Educación" />
 	</main>
 	<KeyboardManager />
 </PrintableLayout>
