--- a/src/pages/min-portfolio/index.astro
+++ b/src/pages/min-portfolio/index.astro
@@ -5,9 +5,12 @@ import PrintableLayout from '@/layouts/printableLayout.astro'
 import Hero from '@/components/printablecv-components/Hero.astro'
 import About from '@/components/printablecv-components/About.astro';
 import Education from '@/components/printablecv-components/Education.astro';
+import Experience from '@/components/printablecv-components/Experience.astro';
+import Projects from '@/components/printablecv-components/Projects.astro';
+import Skills from '@/components/printablecv-components/Skills.astro';
 import KeyboardManager from '@/components/printablecv-components/KeyboardManager.astro'
 
-import { basics, education } from "@cv"
+import { basics, education, experience, projects, skills } from "@cv"
 const { name } = basics
 ---
 
@@ -15,7 +18,10 @@ const { name } = basics
 	<main>
 		<Hero data={basics} />
 		<About data={basics.summary} sectionTitle="Sobre mí" />
+		<Experience data={experience} sectionTitle="Experiencia" />
 		<Education data={education} sectionTitle="Educación" />
+		<Projects data={projects} sectionTitle="Proyectos" />
+		<Skills data={skills} sectionTitle="Habilidades" />
 	</main>
 	<KeyboardManager />
 </PrintableLayout>
