add skills icons components

--- a/src/components/printablecv-components/Skills.astro
+++ b/src/components/printablecv-components/Skills.astro
@@ -1,16 +1,16 @@
 ---
 import Section from "./Section.astro"
-import Git from "@/icons/Git.astro"
-import Github from "@/icons/Github.astro"
-import CSS from "@/icons/CSS.astro"
-import HTML from "@/icons/HTML.astro"
-import Javascript from "@/icons/Javascript.astro"
-import Tailwind from "@/icons/Tailwind.astro"
-import Typescript from "@/icons/Typescript.astro"
-import Node from "@/icons/Node.astro"
-import MySQL from "@/icons/MySQL.astro"
-import Next from "@/icons/Next.astro"
-import React from "@/icons/React.astro"
+import Git from "@/min-port-icons/Git.astro"
+import Github from "@/min-port-icons/Github.astro"
+import CSS from "@/min-port-icons/CSS.astro"
+import HTML from "@/min-port-icons/HTML.astro"
+import Javascript from "@/min-port-icons/Javascript.astro"
+import Tailwind from "@/min-port-icons/Tailwind.astro"
+import Typescript from "@/min-port-icons/Typescript.astro"
+import Node from "@/min-port-icons/Node.astro"
+import MySQL from "@/min-port-icons/MySQL.astro"
+import Next from "@/min-port-icons/Next.astro"
+import React from "@/min-port-icons/React.astro"
 
 interface Props {
   data: any;
