--- a/src/components/themeToggle.astro
+++ b/src/components/themeToggle.astro
@@ -32,7 +32,7 @@
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         const toggleButton = document.getElementById("theme-toggle");
-        toggleButton.addEventListener("click", (event) => {
+        toggleButton?.addEventListener("click", (event) => {
             document.body.classList.toggle("dark");
             document.documentElement.classList.toggle("dark");
         });
