--- a/src/layouts/printableLayout.astro
+++ b/src/layouts/printableLayout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-light-fondo-primary dark:bg-dark-fondo-primary">
+	<body class="bg-[#fff] dark:bg-dark-fondo-primary">
 		<slot />
 		<script>
 			const darkThemeMq = window.matchMedia(
