--- a/src/sections/homeSection.astro
+++ b/src/sections/homeSection.astro
@@ -29,7 +29,7 @@ import logoNan from "@p/dglogoBlueGreen.svg"
     </div>
     <div class="flex items-center gap-2 sm:gap-6">
         <a
-            href="https://drive.google.com/file/d/1kCMxX-9eCDAw1ua2HlPda7Em3Pv-SkO3/view?usp=sharing"
+            href="/min-portfolio"
             target="_blank"
             class="sm:w-40 justify-center p-2 pr-3 flex items-center gap-1 sm:gap-2 font-semibold text-[0.91rem] text-dark-texto-primary dark:text-[#272727] bg-[#43a1f1] dark:bg-[#00fa9a] transition-colors rounded-lg hover:bg-[#00fa9a] dark:hover:bg-light-texto-primary hover:text-[#272727] dark:hover:text-light-fondo-primary"
         >
